Fixed some bugs with scroll depth and set z-index to high values

--- a/src/app/image-search-image/image-search-image.component.scss
+++ b/src/app/image-search-image/image-search-image.component.scss
@@ -2,6 +2,7 @@
   position: absolute;
   width: auto;
   height: auto;
+  z-index: 9999;
 }
 
 .scill-image-search-image img {
