--- a/src/app/image-search/image-search.component.scss
+++ b/src/app/image-search/image-search.component.scss
@@ -24,6 +24,7 @@
   border: 1px solid lightgrey;
   margin-top: -100px;
   background-color: white;
+  z-index: 10000;
 }
 
 .image-area {
